kubernetes/4.3.2_gateway_api_envoy_gateway_multi_apps/gateway/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: snippet-gatewayapi-demo-gateway   # Use "gateway-infra" in production
